[fix/#42] 최근 본 상품 조회 로직 중복 제거 및 정렬 방식 수정